<resources>
    <string name="app_name">WordsFactory</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Let\'s Start</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="add_to_dic">Add to Dictionary</string>
    <string name="name">Name</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>
    <string name="create_account_desc">Create your account</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="intro1.1_text">Learn anytime \nand anywhere</string>
    <string name="intro1.2_text">Quarantine is the perfect time to spend your \nday learning something new, from anywhere!</string>
    <string name="intro2.1_text">Find a course \nfor you</string>
    <string name="intro3.1_text">Improve your skills</string>
    <string name="test_color_text"><font color='#65AAEA'>Example: </font> he developed an interest in cooking.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cooking_transcript">[ˈkʊkɪŋ]</string>
    <string name="Cooking">Cooking</string>
    <string name="content1_text">The practice or skill of preparing food by combining, mixing, and heating ingredients.</string>
    <string name="content1_example"><font color="#65AAEA">Example:</font> he developed an interest in cooking.</string>
    <string name="noun">Noun</string>
    <string name="meanings">Meanings:</string>
    <string name="part_of_speech">Part of speech:</string>
</resources>